fix: title on mobile

--- a/src/Components/HomeBody/Start/Start.module.scss
+++ b/src/Components/HomeBody/Start/Start.module.scss
@@ -119,6 +119,7 @@
     position: absolute;
 
     @media (max-width: 480px) {
+      top: 2rem;
       font-size: 3em;
     }
   }
@@ -163,6 +164,12 @@
   justify-content: center;
   gap: 2rem;
   max-width: 50vw;
+  margin-left: 2rem;
+
+  @media (max-width: 768px) {
+    margin-left: 0;
+    gap: 1rem;
+  }
 
   .text {
     font-size: 1.2rem;
